--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,184 @@
 
 html {
   font-size: 112.5%;
+  height: 100%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: var(--main-bg);
+  /* background-image: url(https://i.pinimg.com/originals/a4/6c/4d/a46c4dea15a013d3f779e8cf97a09a46.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; */
+  font-family: "Outfit";
+  height: 100%;
+  min-height: 100%;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  width: 16.6667rem;
+  max-width: 100vw;
+  height: fit-content;
+  margin: auto;
+  padding: 20px;
+  background: var(--card-bg);
+  /* background: rgba(20, 37, 61, 0.475);
+  -webkit-backdrop-filter: blur(7px);
+  backdrop-filter: blur(7px);
+  border: 1px solid rgba(255, 255, 255, 0.175);
+  box-shadow: 0px 0px 5rem 1.6667rem rgb(7, 2, 34); */
+  border-radius: 13px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5556rem;
+}
+
+.image-container {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.image-container img:nth-child(1) {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 100;
+  border-radius: 10px;
+}
+
+.image-container a {
+  display: inline-block;
+  position: relative;
+  z-index: 150;
+}
+
+.image-container a:hover {
+  opacity: 0.5;
+  transition: opacity 100ms ease-in;
+}
+
+.image-container a:hover ~ .overlay,
+.image-container a:hover ~ img:nth-child(3) {
+  opacity: 1;
+  transition: opacity 100ms ease-in;
+}
+
+.overlay {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  opacity: 0;
+  background: cyan;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  border-radius: 0.6667rem;
+}
+
+.image-container img:nth-child(3) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  z-index: 1000;
+  width: 2.7778rem;
+  height: 2.7778rem;
+  pointer-events: none;
+}
+
+.nft-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.nft-info h2 {
+  color: var(--names);
+  font-size: 1rem;
+}
+
+.nft-info p {
+  color: var(--soft-blue);
+  font-weight: 300;
+  font-size: 0.85rem;
+  line-height: 1.2rem;
+}
+
+.nft-info .info-bottom {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.8rem;
+  margin: 0.3889rem 0;
+}
+
+.pricing-container,
+.time-container {
+  display: flex;
+  gap: 0.2778rem;
+}
+
+.pricing-container {
+  font-weight: 600;
+  color: var(--cyan);
+}
+
+.pricing-container img {
+  width: 0.5rem;
+  height: 0.82rem;
+  align-self: center;
+}
+
+.time-container {
+  color: var(--soft-blue);
+}
+
+.time-container img {
+  width: 0.8rem;
+  height: 0.8rem;
+  align-self: center;
+}
+
+.nft-author {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.6rem;
+  padding: 0.7222rem 0 0.4444rem 0;
+  border-top: 1px solid var(--very-dark-blue-line);
+}
+
+.nft-author img {
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 0.0833rem solid white;
+  border-radius: 100%;
+}
+
+.nft-author p {
+  font-size: 0.8rem;
+  flex: 1 1;
+  color: var(--soft-blue);
+}
+
+.author-name {
+  color: var(--names);
+  text-decoration: none;
+}
+
+.author-name:hover {
+  text-decoration: underline;
 }
